--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,9 @@
 @import './base.css';
+@import './variables.css';
 
 .successToast {
-    background: pink;
+    background: var(--m-color);
+    border: 1px solid var(--m-color);
+    box-shadow: 0px 0px 10px var(--m-color);
+    text-shadow: 0px 0px 5px var(--m-color);
 }
